--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,10 @@
+.h5p-text-ordering {
+  background: #2880d0;
+  font-size: 1.2em;
+  padding: 0.75em;
+  color: #fff;
+}
+
 .h5p-text-ordering-question {
   background: #2880d0;
   font-size: 1.2em;
@@ -84,4 +91,85 @@
   background: #faebf2;
   border-top: 1px solid #f2b8d4;
   border-left: 1px solid #f2b8d4;
+}
+
+.h5p-text-ordering {
+  background-color: #FFF;
+  text-align: center;
+  color: #555;
+}
+
+.h5p-text-ordering-title {
+  text-align: center;
+  margin: 1em 1em 0;
+  font-size: 1.25em;
+}
+
+.h5p-text-ordering-title p {
+  margin: 0.5em auto;
+}
+
+.h5p-text-ordering .h5p-image > img {
+  margin-bottom: 1em;
+  line-height: 0;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.h5p-text-ordering .show-solution-button {
+  display: block;
+  line-height: 1em;
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  background-color: #1a73d9;
+  color: #FFF;
+  border-radius: 2em;
+  padding: 0.5em 1em;
+  margin: 1em auto;
+  box-sizing: border-box;
+  max-width: 90%;
+}
+
+.h5p-text-ordering .show-solution-button:hover,
+.h5p-text-ordering .show-solution-button:focus {
+  background: #1356a3;
+}
+
+.h5p-text-ordering .show-solution-button:active {
+  background: #104888;
+  -webkit-box-shadow: inset 0 4px 0 #0e407a;
+  -moz-box-shadow: inset 0 4px 0 #0e407a;
+  box-shadow: inset 0 4px 0 #0e407a;
+}
+
+.h5p-text-ordering .show-solution-button:before {
+  content: "\F06E";
+  font-family: 'H5PFontAwesome4';
+  padding-right: 0.5em;
+}
+
+.h5p-text-ordering .solution-text {
+  cursor: auto;
+  padding: 0.5em 0;
+  margin: 1em;
+  line-height: 1em;
+  color: #1a73d9;
+  font-weight: bold;
+}
+
+.h5p-text-ordering .solution-text:focus {
+  outline: none;
+}
+.h5p-text-ordering .empty-text-for-nvda {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+.h5p-text-ordering .hidden {
+  display: none;
 }
